--- a/BookBarnV2/Static/css/main.css
+++ b/BookBarnV2/Static/css/main.css
@@ -32,16 +32,11 @@ html {
     overflow-x: hidden;
 }
 
-::-webkit-scrollbar {
-    width: 0px;  /* remove scrollbar space */
-    background: transparent;  /* optional: just make scrollbar invisible */
+/*::-webkit-scrollbar {
+    width: 0px;  
+    background: transparent; 
 }
-
-
-::-webkit-scrollbar-thumb {
-    background: #FF0000;
-}
-
+*/
 
 /*For the Container*/
 .mainContainer {
@@ -102,9 +97,9 @@ html {
 
 .navSearchInput {
     vertical-align: middle;
-    padding: 3px 5px;
+    padding: 5px 5px;
     margin: 0 3px;
-    min-width: 250px;
+    min-width: 400px;
 
     margin-right: 0;
     border-radius: 3px 0 0 3px;
@@ -118,7 +113,7 @@ html {
 }
 
 .navSearchButton {
-    padding: 5px 10px;
+    padding: 6px 10px;
     margin: 0 3px;
     border: none;
 
@@ -529,3 +524,61 @@ tbody {
 .profileOptionButton:hover {
     box-shadow: 6px 7px 5px 0px rgba(0, 0, 0,0.3);
 }
+
+
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+        /*Cart Home Page*/
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+
+
+/*Book Cover*/
+.cartBookCover {
+    margin: 0 20px;
+}
+
+.cartBookCover a {
+    display: inline-block;
+    height: 120px;
+    width: 100px;
+}
+
+.cartBookCover a img {
+    min-width: 100%;
+    min-height: 100%;;
+    border-radius: 3px;
+    -webkit-box-shadow: 3px 3px 20px 2px rgba(0,0,0,0.6);
+    -moz-box-shadow: 3px 3px 20px 2px rgba(0,0,0,0.6);
+    box-shadow: 3px 3px 20px 2px rgba(0,0,0,0.6);
+}
+
+
+/*Cart Table*/
+.cartTable {
+
+}
+
+.cartTable thead tr th {
+
+}
+
+.cartTable tbody tr {
+    height: 200px;
+}
+
+
+/*Book Info*/
+.cartBookLink {
+    color: #333333;
+}
+
+.cartBookLink:hover {
+    color: #333333;
+    text-decoration: none;
+}
+
+.cartBookTitle {
+    font-size: 1.2em;
+}
+
+/*Buttons*/
+
