--- a/BookBarnV2/Templates/BookBarnApp/category.html
+++ b/BookBarnV2/Templates/BookBarnApp/category.html
@@ -60,8 +60,9 @@
                 <div class="row">
                     <div class="col">
                         <div class="categoryHead">                      
-                            <h4>Showing you {{ books|length }} book{{ books|pluralize }}</h4> <hr>
-                        </div>
+                            <h4><strong>{{ genre.gName }}</strong></h4>
+                            <span style="font-size:80%;">(Showing {{ total_books }} book{{ books|pluralize }})</span> <hr>
+                        </div>                        
                     </div>
                 </div>
                 
@@ -76,7 +77,8 @@
                         </div>
                         <div class="col">
                             <ul>
-                                <li><strong>Title : {{ book.bookTitle }}</strong></li>
+                                <li style="list-style-type:none; font-size:110%;"><strong>{{ book.bookTitle|slice:":50" }}{% if book.bookTitle|length > 50 %}...{% endif %}</strong></li>
+                                <li style="list-style-type:none; font-size:80%;">by{% for author in book.authors.all %} {{ author.get_full_name }} {% endfor %}</li> <br>
                                 <li>ISBN : {{ book.isbn }}</li>
                                 <li>GoodReads Rating : {{ book.rating }}</li>
                                 <li>Language : {{ book.language }}</li>
