order details and history page UI

--- a/BookBarnV2/Static/css/main.css
+++ b/BookBarnV2/Static/css/main.css
@@ -365,11 +365,11 @@ html {
 }
 
 .addToCartButtonWrapper {
-    
+    text-align: center;
 }
 
 .addToCartButton {
-    margin: 0 auto;
+    width: 100%;
 }
 
 tbody {
@@ -668,3 +668,18 @@ tbody {
     margin: 0 10px;
     min-width: 160px;
 }
+
+
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+        /*OrderHistory Page*/
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+
+
+.detailBold {
+    font-weight: 600;
+}
+
+.orderDetails {
+    padding: 0 150px;
+}
+
