--- a/BookBarnV2/Templates/ProfileApp/order_details.html
+++ b/BookBarnV2/Templates/ProfileApp/order_details.html
@@ -6,6 +6,54 @@
 
 {% block body_block %}
 
+
+<div class="container mainContainer">
+    <div class="row">
+        <div class="col" style="text-align: center;">
+            <h4>Order Details : ID - {{ order_id }}</h4>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <table class="table cartTable">
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">Item</th>
+                  <th scope="col">Quantity</th>
+                  <th scope="col">Price (Per Book)</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for order in orders %}
+                <tr>
+                  <th scope="row">{{ forloop.counter }}</th>
+                  <td>
+                      <div class="cartBookCover" style="float:left;">
+                            <a href="{{ order.book.get_absolute_url }}"><img src="{{ order.book.coverImage }}" alt="Book Cover" class="img-fluid"></a>
+                        </div>
+                        <a class="cartBookLink" href="{% url 'bookView' order.book.isbn %}">
+                            <span class="cartBookTitle">{{ order.book.bookTitle }}</span><br> 
+                            <span class="cartBookAuthor">by {% for auth in order.book.authors.all %}
+                                    {{ auth.get_full_name }}</span>
+                                
+                                {% endfor %}
+                        </a>
+                  </td>
+                  <td>{{ order.quantity }}</td>
+                  <td>{{ order.book.price }}</td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+        </div>
+    </div>
+
+</div>
+
+
+
 <div class="container mainContainer">
   <div style="text-align: center; text-decoration: underline;">
       <h3>Order Details : ID - {{ order_id }}</h3>
