--- a/BookBarnV2/Static/css/main.css
+++ b/BookBarnV2/Static/css/main.css
@@ -360,8 +360,18 @@ html {
     padding: 15px 0;
 }
 
+.bookCoverMain img {
+    min-width: 100%;
+    min-height: 100%;;
+    border-radius: 3px;
+    -webkit-box-shadow: 3px 3px 20px 2px rgba(0,0,0,0.6);
+    -moz-box-shadow: 3px 3px 20px 2px rgba(0,0,0,0.6);
+    box-shadow: 3px 3px 20px 2px rgba(0,0,0,0.6);
+}
+
 .tableWrapper {
     margin: 5px auto;
+    color: #fff;
 }
 
 .addToCartButtonWrapper {
