--- a/BookBarnV2/Static/css/main.css
+++ b/BookBarnV2/Static/css/main.css
@@ -49,6 +49,80 @@ html {
     box-shadow: 0px 0px 108px -16px rgba(0,0,0,0.75);
 }
 
+
+
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+        /*LoginPage Owl*/
+/*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
+
+
+.owl {
+  margin: auto;
+  margin-bottom: -9px;
+  width: 211px;
+  height: 108px;
+  background-image: url("https://dash.readme.io/img/owl-login.png");
+  position: relative;
+}
+
+.owl .hand {
+  width: 34px;
+  height: 34px;
+  border-radius: 40px;
+  background-color: #472d20;
+  transform: scaleY(0.6);
+  position: absolute;
+  left: 14px;
+  bottom: -8px;
+  transition: 0.3s ease-out;
+}
+
+.owl .hand.password {
+  transform: translateX(42px) translateY(-15px) scale(0.7);
+}
+
+.owl .hand.hand-r {
+  left: 170px;
+}
+
+.owl .hand.hand-r.password {
+  transform: translateX(-42px) translateY(-15px) scale(0.7);
+}
+
+.owl .arms {
+  position: absolute;
+  top: 58px;
+  height: 41px;
+  width: 100%;
+  overflow: hidden;
+}
+
+.owl .arms .arm {
+  width: 40px;
+  height: 65px;
+  background-image: url("https://dash.readme.io/img/owl-login-arm.png");
+  position: absolute;
+  left: 20px;
+  top: 40px;
+  transition: 0.3s ease-out;
+}
+
+.owl .arms .arm.password {
+  transform: translateX(40px) translateY(-40px);
+}
+
+.owl .arms .arm.arm-r {
+  left: 158px;
+  transform: scaleX(-1);
+}
+
+.owl .arms .arm.arm-r.password {
+  transform: translateX(-40px) translateY(-40px) scaleX(-1);
+}
+
+
+
+
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
         /*Navbar Styles*/
 /*xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx*/
@@ -233,10 +307,25 @@ html {
     margin: 50px 0;
 }
 
+.loginFormWrapper {
+    background-color: #eeeeee;
+    padding: 60px 35px;
+    margin: auto;
+    margin-top: -9px;
+    border-radius: 7px;
+ -webkit-box-shadow: 0px 8px 28px 4px rgba(0,0,0,0.4);
+-moz-box-shadow: 0px 8px 28px 4px rgba(0,0,0,0.4);
+box-shadow: 0px 8px 28px 4px rgba(0,0,0,0.4);
+}
+
 .loginPageForm {
-    max-width: 350px;
+    max-width: 450px;
     margin: 0 auto;
     text-align: center;
+}
+
+.loginPageForm input {
+    padding: 9px;
 }
 
 .loginPageButton {
@@ -692,4 +781,5 @@ tbody {
 .orderDetails {
     padding: 0 150px;
 }
+
 
