--- a/BookBarnV2/Templates/BookBarnApp/category.html
+++ b/BookBarnV2/Templates/BookBarnApp/category.html
@@ -52,7 +52,7 @@
                         <a class="categoryListLink" href="{% url 'categoryView' gid='G500000022' %}"><li class="categoryListItem">Spirituality</li></a>
                         <a class="categoryListLink" href="{% url 'categoryView' gid='G500000037' %}"><li class="categoryListItem">War</li></a>
                     </ul>
-                    <a href="{% url 'categoryListView' %}"><button class="btn btn-success">More</button></a>
+                    <a href="{% url 'categoryListView' %}"><button class="loginPageButton">More</button></a>
                 </div>
             </div>
 
