--- a/BookBarnV2/Templates/SearchApp/searchresult.html
+++ b/BookBarnV2/Templates/SearchApp/searchresult.html
@@ -30,8 +30,9 @@
                 </div>
                 <div class="col">
                     <ul>
-                        <li><strong>Title : {{ book.bookTitle }}</strong></li>
-                        <li>Authors: {% for author in book.authors.all %} {{ author.get_full_name }} {% endfor %}</li>
+                        <li style="list-style-type:none; font-size:110%;"><strong>{{ book.bookTitle|slice:":50" }}{% if book.bookTitle|length > 50 %}...{% endif %}</strong></li>
+                        <li style="list-style-type:none; font-size:80%;">by{% for author in book.authors.all %} {{ author.get_full_name }} {% endfor %}</li> <br>
+                        <li>ISBN : {{ book.isbn }}</li>
                         <li>GoodReads Rating : {{ book.rating }}</li>
                         <li>Language : {{ book.language }}</li>
                         <li>Price : &#8377; {{book.price}}</li>
