5 Star rating graphics

--- a/BookBarnV2/Templates/BookBarnApp/book.html
+++ b/BookBarnV2/Templates/BookBarnApp/book.html
@@ -28,9 +28,10 @@
                                 <tr class="bg-success">
                                     <th scope="row">Rating:</th>
                                     <td>
-                                        <div class="star-ratings-sprite">
-                                            <span style="width:{{ rating_percent }}%" class="star-ratings-sprite-rating"></span>
-                                        </div>
+                                        <div class="star-ratings-css">
+  <div class="star-ratings-css-top" style="width: 84%"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+  <div class="star-ratings-css-bottom"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+</div>
                                     </td>                            
                                 </tr>
                                 <tr class="bg-success">
