The End.  Jai Ram Ji Ki.

--- a/BookBarnV2/Templates/BookBarnApp/login.html
+++ b/BookBarnV2/Templates/BookBarnApp/login.html
@@ -35,6 +35,12 @@
             
         </div>
     </div>
+
+    <div class="row">
+      <div class="col" style="text-align: center; padding-top: 50px;">
+        <a href="/admin"><h6>Admin login</h6></a>
+      </div>
+    </div>
 </div>
 
 
